fixed the collision and the visibility of the pieces

--- a/map_style.css
+++ b/map_style.css
@@ -49,8 +49,11 @@
   position: relative;
   width: 100;
   height: 100;
+  border-radius: 25px;
   transition: transform 0.5s;
-  transform-style: preserve-3d;
+  transform-style: preserve-3d;  
+  box-shadow: 10px 10px 10px #000000;
+  background-color: rgba(255, 255, 255, 0.4);
 }
 
 .flip-this:hover {
